--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@astrojs/sitemap": "^3.6.0",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@tailwindcss/vite": "^4.1.14",
         "@types/react": "^19.2.0",
         "@types/react-dom": "^19.2.0",
@@ -20,6 +21,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.544.0",
+        "nuqs": "^2.7.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "tailwind-merge": "^3.3.1",
